--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "d3631975-8ef0-41cb-af75-b3f859f7966e",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "0f7a70c7-1649-4b7b-adac-2350c9db0fcc",
    "metadata": {},
    "outputs": [
@@ -80,17 +80,17 @@
    "id": "6df5a239-8011-4b20-895c-8f067e667606",
    "metadata": {},
    "source": [
-    "Null Hypothesis: the average GPA of the students with far-home locations (B) is lower than or equal to the average GPA μ ≤ 82.957047\n",
-    "Alternative Hypothesis: the near-home students have a GPA lower than the average GPA  μ > 82.957047\n",
-    "Level of significance: 𝛼 = 0.025 , degree_of_freedom = 8  --> t =  2.306\n",
-    "Decision: Since t = -0.2184343079750918 is greater than 2.306, The test statistic falls in the nonrejection region, so 𝐻𝑜 is not rejected.\n",
+    "Null Hypothesis: the average GPA of the students with near-home locations (B) is more than or equal to the average GPA μ ≥ 82.957047\n",
+    "Alternative Hypothesis: the near-home students have a GPA lower than the average GPA  μ < 82.957047\n",
+    "Level of significance: 𝛼 = 0.025 , degree_of_freedom = 8  --> t =  -2.306\n",
+    "Decision: Since t = -0.2184343079750918 is greater than -1.645, The test statistic falls in the nonrejection region, so 𝐻𝑜 is not rejected.\n",
     "At the 2.5% level of significance, there is not enough evidence to reject the claim that\n",
-    "the average GPA of far-home location students is less than or equal to the average one (82.957047)"
+    "the average GPA of near-home location students is more than or equal to the average one (82.957047)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "8134217f-9833-4834-9e55-6b3aa34807b4",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "0f66bcdc-d994-4b76-bf50-05e9b36d507e",
    "metadata": {},
    "outputs": [
@@ -141,16 +141,16 @@
    "metadata": {},
    "source": [
     "Null Hypothesis: the average GPA of the students who don't prefer mathematics is less than or equal to the average GPA μ ≤ 82.957047\n",
-    "Alternative Hypothesis: the students who prefer maths have a GPA higher than the average GPA  μ > 82.957047\n",
+    "Alternative Hypothesis: the students who don't prefer maths have a GPA higher than the average GPA  μ > 82.957047\n",
     "level of significance: α = 0.05  -->  Z = 1.645  \n",
-    "Decision: Since Z = -0.987344380376583 is less than 1.645, The test statistic falls in the nonrejection region, so 𝐻𝑜 is not rejected.\n",
+    "Decision: Since Z = 0.5547304794075413 is less than 1.645, The test statistic falls in the nonrejection region, so 𝐻𝑜 is not rejected.\n",
     "At the 5% level of significance, there is not enough evidence to reject the claim that\n",
-    "the average GPA of students who don't prefer mathematics is less than or equal to the average ones (82.957047)"
+    "the average GPA of students who don't prefer mathematics is more than or equal to the average ones (82.957047)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "344564aa-523e-4a6a-a396-c69a4a1301fc",
    "metadata": {},
    "outputs": [
@@ -158,21 +158,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Z-score: -0.987344380376583\n"
+      "Z-score: 0.5547296428290911\n"
      ]
     }
    ],
    "source": [
-    "x = 82.020625\n",
-    "σ = 5.365105                  \n",
-    "N = 32\n",
+    "x = 83.367534\n",
+    "σ = 6.322354 \n",
+    "N = 73\n",
     "Z = (x - μ) / (σ / math.sqrt(N))\n",
     "print(\"Z-score:\", Z)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "3a28dafc-8a16-4bc7-b1e0-95e719598090",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "0ef452c3-84e0-4346-9f93-a0eab6546b45",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "de3950b5-3295-47ab-a243-749877cbe2b7",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "d8c5b249-ca99-410f-9b46-7382b3864824",
    "metadata": {},
    "outputs": [
@@ -292,17 +292,6 @@
     "N = 79\n",
     "Z = (x - μ) / (σ / math.sqrt(N))\n",
     "print(\"Z-score:\", Z)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "cd9795ea-89e7-47b4-822b-b3c0833d0c5e",
-   "metadata": {},
-   "source": [
-    "conclusions:\n",
-    "Far home location doesn't affect a student's GPA negatively and makes him lower than the average.\n",
-    "Students who don't prefer mathematics are more likely to have lower GPAs.\n",
-    "Students from rich families are more likely to have higher GPAs."
    ]
   }
  ],
