modified home location

--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -80,12 +80,12 @@
    "id": "6df5a239-8011-4b20-895c-8f067e667606",
    "metadata": {},
    "source": [
-    "Null Hypothesis: the average GPA of the students with near-home locations (B) is more than or equal to the average GPA μ ≥ 82.957047\n",
-    "Alternative Hypothesis: the near-home students have a GPA lower than the average GPA  μ < 82.957047\n",
+    "Null Hypothesis: the average GPA of the students with home locations at Baghdad (B) is more than or equal to the average GPA μ ≥ 82.957047\n",
+    "Alternative Hypothesis: the students with home locations at Baghdad (B) have a GPA lower than the average GPA  μ < 82.957047\n",
     "Level of significance: 𝛼 = 0.025 , degree_of_freedom = 8  --> t =  -2.306\n",
     "Decision: Since t = -0.2184343079750918 is greater than -1.645, The test statistic falls in the nonrejection region, so 𝐻𝑜 is not rejected.\n",
     "At the 2.5% level of significance, there is not enough evidence to reject the claim that\n",
-    "the average GPA of near-home location students is more than or equal to the average one (82.957047)"
+    "the average GPA of students with home locations at Baghdad (B) is more than or equal to the average one (82.957047)"
    ]
   },
   {
@@ -166,69 +166,6 @@
     "x = 83.367534\n",
     "σ = 6.322354 \n",
     "N = 73\n",
-    "Z = (x - μ) / (σ / math.sqrt(N))\n",
-    "print(\"Z-score:\", Z)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "3a28dafc-8a16-4bc7-b1e0-95e719598090",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       Average GPA  Standard Deviation  Number of Entries\n",
-      "from3                                                    \n",
-      "S        89.490000            3.328231                  6\n",
-      "A        83.543333            5.144532                 81\n",
-      "B        81.150000            4.716616                  4\n",
-      "D        79.816000            6.982828                 10\n",
-      "C        70.945000            7.294073                  4\n"
-     ]
-    }
-   ],
-   "source": [
-    "# ************* checking the effect of form3 (students application) on the students GPA ****************\n",
-    "average_gpa_by_category = data.groupby(\"from3\")[\"GPA\"].agg(['mean', 'std', 'size'])\n",
-    "average_gpa_by_category.columns = ['Average GPA', 'Standard Deviation', 'Number of Entries']\n",
-    "average_gpa_by_category_sorted = average_gpa_by_category.sort_values(by='Average GPA', ascending=False)\n",
-    "print(average_gpa_by_category_sorted)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "9bcb494d-c4db-46f3-b303-c6ccb3d2598d",
-   "metadata": {},
-   "source": [
-    "Null Hypothesis: the average GPA of the students category A is less than or equal to the average GPA μ ≤ 82.957047\n",
-    "Alternative Hypothesis: the students of category A have a GPA higher than the average GPA  μ > 82.957047\n",
-    "level of significance: α ≤ 0.05  -->  Z = -1.645  \n",
-    "Decision: Since Z = 0.18465268348992786 is greater than -1.645, The test statistic falls in the nonrejection region, so 𝐻𝑜 is not rejected.\n",
-    "At the 5% level of significance, there is not enough evidence to reject the claim that\n",
-    "the average GPA of rich students is more than or equal to the average ones (82.957047)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "0ef452c3-84e0-4346-9f93-a0eab6546b45",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Z-score: 1.0256653916374723\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = 83.543333\n",
-    "σ = 5.144532\n",
-    "N = 81\n",
     "Z = (x - μ) / (σ / math.sqrt(N))\n",
     "print(\"Z-score:\", Z)"
    ]
